--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+
 #Localhost
 
 # PROFILES
 #spring.profiles.active=default
-spring.profiles.active=@activatedProperties@
+#spring.profiles.active=@activatedProperties@
 #spring.profiles.active=baiwa
 
 # ----------------------------------------
@@ -29,20 +30,19 @@ server.context-path=/ims-webapp
 
 
 
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.137.1:1521:excisedb
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
-
-# Data base Server `Baiwa`
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+#spring.datasource.url=jdbc:oracle:thin:@192.168.137.1:1521:excisedb
 #spring.datasource.username=exciseadm
 #spring.datasource.password=exciseadm
 
+# Data base Server `Baiwa`
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
+
 # Data local oracle 
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:baiwadev
 #spring.datasource.username=exciseadm
 #spring.datasource.password=exciseadm
@@ -58,3 +58,10 @@ app.logging.path=/tmp/webpoc/logs
 app.logging.rolling-file-appender.min-index=1
 app.logging.rolling-file-appender.max-index=10
 app.logging.rolling-file-appender.max-file-size=10MB
+
+
+ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
+ws.excise.ipaddress=0:0:0:0:0:0:0:1
+ws.excise.username=btchol1or
+ws.excise.password=XXXX
+ws.excise.systemid=BT
