--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -42,8 +42,8 @@ spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 
 # Data local oracle 
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:baiwadev
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@localhost:1521:excisedb
 #spring.datasource.username=exciseadm
 #spring.datasource.password=exciseadm
 
