WebService Test SSO

--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -475,6 +475,16 @@
 										<extraarg>classpath:wsdl/CurrentDate.wsdl</extraarg>
 									</extraargs>
 								</wsdlOption>
+								<wsdlOption>
+									<wsdl>${basedir}/src/test/resources/wsdl/LoginLdap.wsdl</wsdl>
+									<extraargs>
+										<extraarg>-verbose</extraarg>
+										<extraarg>-p</extraarg><!-- targetNamespace -->
+										<extraarg>http://ws.baiwa.th.com=th.co.baiwa.exampleproject.ws.userldap</extraarg>
+										<extraarg>-wsdlLocation</extraarg>
+										<extraarg>classpath:wsdl/LoginLdap.wsdl</extraarg>
+									</extraargs>
+								</wsdlOption>
 							</wsdlOptions>
 						</configuration>
 						<goals>
