--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -41,16 +41,16 @@ server.context-path=/ims-webapp
 #spring.datasource.password=exciseadm
 
 # Data base Server `Baiwa`
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.username=exciseadm
-#spring.datasource.password=exciseadm
-
-# Data local oracle 
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@localhost:1521:excisedb
+spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
+
+# Data local oracle 
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@localhost:1521:excisedb
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
 
 # Path for upload files
 app.datasource.path.upload=/excise-upload/
