--- a/workspace/ims-client/package.json
+++ b/workspace/ims-client/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "^4.0.0",
         "chart.js": "^2.7.2",
         "core-js": "^2.4.1",
+        "datatables.net-fixedcolumns": "^3.2.6",
         "datatables.net-se": "^1.10.16",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2.1",
