--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -28,7 +28,10 @@ server.context-path=/ims-webapp
 
 # Data base Server
 
-
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.3.70:1521:excisedb
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
 
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@192.168.137.1:1521:excisedb
@@ -66,6 +69,7 @@ app.logging.rolling-file-appender.max-file-size=10MB
 
 
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
+ws.excise.endpointLicFri6020=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6020
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
 ws.excise.password=XXXX
