--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -69,6 +69,7 @@ app.logging.rolling-file-appender.max-file-size=10MB
 
 
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
+ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
 ws.excise.endpointLicFri6020=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6020
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
