--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -44,16 +44,16 @@ server.context-path=/ims-webapp
 #spring.datasource.password=exciseadm
 
 # Data base Server `Baiwa`
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
-
-# Data local oracle 
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@localhost:1521:excisedb
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
 #spring.datasource.username=exciseadm
 #spring.datasource.password=exciseadm
+
+# Data local oracle 
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@localhost:1521:excisedb
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
 
 # Path for upload files
 app.datasource.path.upload=/excise-upload/
@@ -75,3 +75,9 @@ ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
 ws.excise.password=XXXX
 ws.excise.systemid=BT
+
+wsdl.endpoint.ws.lpap=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
+wsdl.endpoint.ws.current.date=http://150.95.24.42:8080/SystemCurrentDate/services/CurrentDate
+wsdl.endpoint.ws.lpap.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
+os.excise.applicationId=ETN
+application.env=
