webservie file MockupEsService

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -71,10 +71,14 @@ app.logging.rolling-file-appender.max-file-size=10MB
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
 ws.excise.endpointLicFri6020=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6020
+ws.excise.endpointIncFri8000 = http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
+ws.excise.endpointRegFri4000 = http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
 ws.excise.password=XXXX
 ws.excise.systemid=BT
+
+
 
 wsdl.endpoint.ws.lpap=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
 wsdl.endpoint.ws.current.date=http://150.95.24.42:8080/SystemCurrentDate/services/CurrentDate
