--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -85,3 +85,10 @@ wsdl.endpoint.ws.current.date=http://150.95.24.42:8080/SystemCurrentDate/service
 wsdl.endpoint.ws.lpap.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
 os.excise.applicationId=ETN
 application.env=
+
+
+version.program.taxAudit=0.2.10
+version.program.internalAudit=0.1.10
+version.program.operationAudit=0.0.10
+version.program.exportAudit=0.1.10
+version.program.reportAudit=0.1.10
