--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -92,3 +92,4 @@ version.program.internalAudit=0.1.10
 version.program.operationAudit=0.0.10
 version.program.exportAudit=0.1.10
 version.program.reportAudit=0.1.10
+version.program=0.3.10
