--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -80,6 +80,10 @@ ws.excise.systemid=BT
 
 
 
+ws.excise.get.assessment=https://26c01e8c-a0fb-476e-9c5f-7afc84cbf2e5.mock.pstmn.io/int02m5/getJsonAssess?year=2561&oCode=010100
+
+
+
 wsdl.endpoint.ws.lpap=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
 wsdl.endpoint.ws.current.date=http://150.95.24.42:8080/SystemCurrentDate/services/CurrentDate
 wsdl.endpoint.ws.lpap.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
