--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -87,6 +87,7 @@ ws.excise.get.assessment=https://26c01e8c-a0fb-476e-9c5f-7afc84cbf2e5.mock.pstmn
 wsdl.endpoint.ws.lpap=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
 wsdl.endpoint.ws.current.date=http://150.95.24.42:8080/SystemCurrentDate/services/CurrentDate
 wsdl.endpoint.ws.lpap.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
+#wsdl.endpoint.ws.lpap.dev=http://localhost:8181/LdapUserLogin/services/LoginLdap
 os.excise.applicationId=ETN
 application.env=
 
