add web service

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -91,6 +91,8 @@ wsdl.endpoint.ws.lpap.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginL
 os.excise.applicationId=ETN
 application.env=
 
+ws.excise.get.systemError=https://3aeabe89-901b-4504-9763-fd2d722b0bf7.mock.pstmn.io/oper-report/rest/getJsonSystem
+
 
 version.program.taxAudit=0.2.10
 version.program.internalAudit=0.1.10
