Change fix web service

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # PROFILES
 #spring.profiles.active=default
 #spring.profiles.active=@activatedProperties@
-#spring.profiles.active=baiwa
+spring.profiles.active=office
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -44,10 +44,10 @@ server.context-path=/ims-webapp
 #spring.datasource.password=exciseadm
 
 # Data base Server `Baiwa`
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
 
 # Data local oracle 
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
@@ -71,16 +71,26 @@ app.logging.rolling-file-appender.max-file-size=10MB
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
 ws.excise.endpointLicFri6020=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6020
-ws.excise.endpointIncFri8000 = http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
-ws.excise.endpointRegFri4000 = http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
+ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
 ws.excise.password=XXXX
 ws.excise.systemid=BT
+ws.excise.sourceSystem=XXX
+ws.excise.destinationSystem=PM
+ws.excise.options=
+ws.excise.ipaddress=10.11.1.10
 
 
 
+#ws.excise.pmGetListProject=http://192.168.160.131:7003/stapmw/rest/pmGetListProject/send
+
+ws.excise.pmGetListProject=https://c39dd5c5-6d1d-4b74-baff-7acda92e4c3a.mock.pstmn.io/stapmw/rest/pmGetListProject/send
 ws.excise.get.assessment=https://26c01e8c-a0fb-476e-9c5f-7afc84cbf2e5.mock.pstmn.io/int02m5/getJsonAssess?year=2561&oCode=010100
+ws.excise.pmGetDetailProject=https://3783c5ef-ab48-40cb-b447-48792aae4536.mock.pstmn.io/stapmw/rest/pmGetDetailProject/send
+
+
 
 
 
