--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # PROFILES
 #spring.profiles.active=default
 #spring.profiles.active=@activatedProperties@
-spring.profiles.active=office
+#spring.profiles.active=office
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -44,10 +44,10 @@ server.context-path=/ims-webapp
 #spring.datasource.password=exciseadm
 
 # Data base Server `Baiwa`
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.username=exciseadm
-#spring.datasource.password=exciseadm
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
 
 # Data local oracle 
 #spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
