--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.profiles.active=default
 #spring.profiles.active=@activatedProperties@
 #spring.profiles.active=local
-#spring.profiles.active=office
+spring.profiles.active=office
 
 # ----------------------------------------
 # WEB PROPERTIES
