--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 # PROFILES
 #spring.profiles.active=default
 #spring.profiles.active=@activatedProperties@
-spring.profiles.active=local
-#spring.profiles.active=office
+#spring.profiles.active=local
+spring.profiles.active=office
 #spring.profiles.active=training
 
 # ----------------------------------------
