--- a/workspace/ims-webapp/src/main/resources/application-training.properties
+++ b/workspace/ims-webapp/src/main/resources/application-training.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.10.12:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=EXCISEADM
 spring.datasource.password=EXCISEADM
 
@@ -11,8 +11,8 @@ ws.excise.pmGetDetailProject=https://3783c5ef-ab48-40cb-b447-48792aae4536.mock.p
 
 
 wsdl.endpoint.ws.lpap=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
-wsdl.endpoint.ws.current.date=http://192.168.10.12:8080/SystemCurrentDate/services/CurrentDate
-wsdl.endpoint.ws.lpap.dev=http://192.168.10.12:8080/LdapUserLogin/services/LoginLdap
+wsdl.endpoint.ws.current.date=http://localhost:8080/SystemCurrentDate/services/CurrentDate
+wsdl.endpoint.ws.lpap.dev=http://localhost:8080/LdapUserLogin/services/LoginLdap
 os.excise.applicationId=ETN
 application.env=
 
