--- a/workspace/ims-webapp/src/main/resources/application-training.properties
+++ b/workspace/ims-webapp/src/main/resources/application-training.properties
@@ -19,6 +19,8 @@ application.env=
 ws.excise.get.systemError=https://3aeabe89-901b-4504-9763-fd2d722b0bf7.mock.pstmn.io/oper-report/rest/getJsonSystem
 
 
+ws.excise.endpointIncFri8020=https://85543414-068a-4928-bcdc-3bde4f8fe9b6.mock.pstmn.io/json8020
+
 version.program.taxAudit=0.2.10
 version.program.internalAudit=0.1.10
 version.program.operationAudit=0.0.10
