--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -95,10 +95,10 @@
 		</dependency>
 
 		<!-- Spring data JPA, default tomcat pool, exclude it -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<!-- Starter for using Spring Security -->
 		<dependency>
