--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jmx.enabled=false
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION
-server.servlet.context-path=/ecert-webapp
+server.servlet.context-path=/excise-new-design
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
@@ -15,7 +15,7 @@ spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 #####  AD : MOCKUP
-ldap.url=ldap://10.200.160.16:389
-ldap.base=OU=Locations,DC=TMBTest,DC=local
-ldap.domain=TMBTest.local
+#ldap.url=ldap://10.200.160.16:389
+#ldap.base=OU=Locations,DC=TMBTest,DC=local
+#ldap.domain=TMBTest.local
 ### JPA
