--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -359,6 +359,12 @@
 			<artifactId>expectit-core</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>2.0.1.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
