--- a/workspace/ims-webapp/src/test/resources/application.properties
+++ b/workspace/ims-webapp/src/test/resources/application.properties
@@ -1,26 +1,21 @@
-#Localhost
-
+spring.jmx.enabled=false
 # PROFILES
 #spring.profiles.active=default
-#spring.profiles.active=@activatedProperties@
-#spring.profiles.active=baiwa
 # ----------------------------------------
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION
-server.servlet.context-path=/ecert-webapp
-
+server.servlet.context-path=/excise-new-design
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
-
 # Data base Server
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://150.95.24.42:1434;databaseName=ecert
-spring.datasource.username=ecert
-spring.datasource.password=P@ssw0rd
-
-
-# Path for upload files
-app.datasource.path.upload=/tmb-upload/
-app.datasource.path.report=/tmb-report/
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseadm
+spring.datasource.password=exciseadm
+#####  AD : MOCKUP
+#ldap.url=ldap://10.200.160.16:389
+#ldap.base=OU=Locations,DC=TMBTest,DC=local
+#ldap.domain=TMBTest.local
+### JPA
