--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jmx.enabled=false
 # PROFILES
-#spring.profiles.active=default
+#spring.profiles.active=dev
 # ----------------------------------------
 # WEB PROPERTIES
 # ----------------------------------------
@@ -19,3 +19,14 @@ spring.datasource.password=exciseadm
 #ldap.base=OU=Locations,DC=TMBTest,DC=local
 #ldap.domain=TMBTest.local
 ### JPA
+
+ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
+ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+ws.excise.ipaddress=0:0:0:0:0:0:0:1
+ws.excise.username=btchol1or
+ws.excise.password=XXXX
+ws.excise.systemid=BT
+ws.excise.sourceSystem=XXX
+ws.excise.destinationSystem=PM
+ws.excise.options=
+ws.excise.ipaddress=10.11.1.10
