--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -10,8 +10,14 @@ server.servlet.context-path=/excise-backend
 # DATA PROPERTIES
 # ----------------------------------------
 # Data base Server
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
+
+# Data base office
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 #####  AD : MOCKUP
