Fix project for missing configure

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,31 +1,25 @@
-spring.jmx.enabled=false
 # PROFILES
+spring.profiles.active=@activatedProperties@
 #spring.profiles.active=dev
+
 # ----------------------------------------
 # WEB PROPERTIES
 # ----------------------------------------
 # EMBEDDED SERVER CONFIGURATION
 server.servlet.context-path=/excise-backend
+
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
-# Data base Server
-#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.username=exciseadm
-#spring.datasource.password=exciseadm
-
 # Data base office
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
-#####  AD : MOCKUP
-#ldap.url=ldap://10.200.160.16:389
-#ldap.base=OU=Locations,DC=TMBTest,DC=local
-#ldap.domain=TMBTest.local
-### JPA
 
+### JPA
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
