--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -33,12 +33,9 @@
 		<hikaricp.version>2.6.3</hikaricp.version>
 		<p6spy.version>3.0.0</p6spy.version>
 		<swagger.version>2.7.0</swagger.version>
-		<poi.version>3.17</poi.version>
-		<poi.ooxml.version>3.17</poi.ooxml.version>
 		<jasperreports.version>6.5.1</jasperreports.version>
 		<itext.version>2.1.7</itext.version>
-		<quartz.version>2.2.1</quartz.version>
-		<jsch.version>0.1.54</jsch.version>
+		<apache-poi.version>3.17</apache-poi.version>
 		<apache.cxf.version>3.2.1</apache.cxf.version>
 		<!-- Plugin Version -->
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
@@ -127,18 +124,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-
-		<!-- Spring Security LDAP -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-ldap</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.unboundid</groupId>
-			<artifactId>unboundid-ldapsdk</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- Starter for testing Spring Boot applications with libraries including JUnit, Hamcrest and Mockito -->
@@ -311,6 +296,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- Apache POI - Java API To Access Microsoft Format Files -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>${apache-poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${apache-poi.version}</version>
+		</dependency>
 
 		<!-- Apache CXF Spring Boot Starter JAX-WS -->
 		<dependency>
@@ -332,22 +329,6 @@
 			<version>${apache.cxf.version}</version>
 		</dependency>
 
-		<!-- Used to work with the older excel file format - `.xls` -->
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.17</version>
-		</dependency>
-
-		<!-- Used to work with the newer excel file format - `.xlsx` -->
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>3.17</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -355,8 +336,7 @@
 		<!-- This is the name of the bundled project when it is finally built. -->
 		<finalName>${project.name}</finalName>
 
-		<!-- List of resource elements that each describe what and where to include 
-			files associated with this project. -->
+		<!-- List of resource elements that each describe what and where to include files associated with this project. -->
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -366,8 +346,7 @@
 
 		<plugins>
 
-			<!-- Allowing to package executable jar or war archives and run an application 
-				"in-place" -->
+			<!-- Allowing to package executable jar or war archives and run an application "in-place" -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -385,8 +364,7 @@
 				</executions>
 			</plugin>
 
-			<!-- The Resources Plugin handles the copying of project resources to 
-				the output directory -->
+			<!-- The Resources Plugin handles the copying of project resources to the output directory -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
