--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -19,6 +19,12 @@ spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 
+# Data base Server
+#spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
+
 ### JPA
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
