--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.datasource.password=exciseadm
 # Data base Server
 #spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.username=exciseadm
-#spring.datasource.password=exciseadm
+#spring.datasource.username=exciseuser
+#spring.datasource.password=exciseuser
 
 ### JPA
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
