commit change package

--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -59,7 +59,8 @@
 			<version>${commons.io.version}</version>
 		</dependency>
 
-		<!-- Starter for building web, including RESTful, applications using Spring MVC. Uses Tomcat as the default embedded container -->
+		<!-- Starter for building web, including RESTful, applications using Spring 
+			MVC. Uses Tomcat as the default embedded container -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -71,7 +72,8 @@
 			</exclusions>
 		</dependency>
 
-		<!-- Starter for using Tomcat as the embedded servlet container. Default servlet container starter used by spring-boot-starter-web -->
+		<!-- Starter for using Tomcat as the embedded servlet container. Default 
+			servlet container starter used by spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -113,8 +115,9 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<!-- Modern server-side Java template engine for both web and standalone environments -->
+
+		<!-- Modern server-side Java template engine for both web and standalone 
+			environments -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
@@ -126,7 +129,8 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<!-- Starter for testing Spring Boot applications with libraries including JUnit, Hamcrest and Mockito -->
+		<!-- Starter for testing Spring Boot applications with libraries including 
+			JUnit, Hamcrest and Mockito -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -162,7 +166,8 @@
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 
-		<!-- Gson: A Java serialization/deserialization library to convert Java Objects into JSON and back -->
+		<!-- Gson: A Java serialization/deserialization library to convert Java 
+			Objects into JSON and back -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -296,7 +301,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Apache POI - Java API To Access Microsoft Format Files -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -329,6 +334,12 @@
 			<version>${apache.cxf.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.13.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -336,7 +347,8 @@
 		<!-- This is the name of the bundled project when it is finally built. -->
 		<finalName>${project.name}</finalName>
 
-		<!-- List of resource elements that each describe what and where to include files associated with this project. -->
+		<!-- List of resource elements that each describe what and where to include 
+			files associated with this project. -->
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -346,7 +358,8 @@
 
 		<plugins>
 
-			<!-- Allowing to package executable jar or war archives and run an application "in-place" -->
+			<!-- Allowing to package executable jar or war archives and run an application 
+				"in-place" -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -364,7 +377,8 @@
 				</executions>
 			</plugin>
 
-			<!-- The Resources Plugin handles the copying of project resources to the output directory -->
+			<!-- The Resources Plugin handles the copying of project resources to 
+				the output directory -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<configuration>
@@ -436,16 +450,16 @@
 										<extraarg>classpath:wsdl/LoginLdap.wsdl</extraarg>
 									</extraargs>
 								</wsdlOption>
-<!-- 								<wsdlOption> -->
-<!-- 									<wsdl>${basedir}/src/test/resources/wsdl/LDPAGAuthenAndGetUserRoleService.wsdl</wsdl> -->
-<!-- 									<extraargs> -->
-<!-- 										<extraarg>-verbose</extraarg> -->
-<!-- 										<extraarg>-p</extraarg>targetNamespace -->
-<!-- 										<extraarg>http://ws.baiwa.th.com=th.co.baiwa.exampleproject.ws.excisews</extraarg> -->
-<!-- 										<extraarg>-wsdlLocation</extraarg> -->
-<!-- 										<extraarg>classpath:wsdl/LDPAGAuthenAndGetUserRoleService.wsdl</extraarg> -->
-<!-- 									</extraargs> -->
-<!-- 								</wsdlOption> -->
+								<!-- <wsdlOption> -->
+								<!-- <wsdl>${basedir}/src/test/resources/wsdl/LDPAGAuthenAndGetUserRoleService.wsdl</wsdl> -->
+								<!-- <extraargs> -->
+								<!-- <extraarg>-verbose</extraarg> -->
+								<!-- <extraarg>-p</extraarg>targetNamespace -->
+								<!-- <extraarg>http://ws.baiwa.th.com=th.co.baiwa.exampleproject.ws.excisews</extraarg> -->
+								<!-- <extraarg>-wsdlLocation</extraarg> -->
+								<!-- <extraarg>classpath:wsdl/LDPAGAuthenAndGetUserRoleService.wsdl</extraarg> -->
+								<!-- </extraargs> -->
+								<!-- </wsdlOption> -->
 							</wsdlOptions>
 						</configuration>
 						<goals>
