--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.servlet.context-path=/excise-backend
 # ----------------------------------------
 # DATA PROPERTIES
 # ----------------------------------------
-# Data base office
+# DATASOURCE - Office
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
@@ -19,13 +19,14 @@ spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
 spring.datasource.username=exciseadm
 spring.datasource.password=exciseadm
 
-# Data base Server
+# DATASOURCE - Baiwa Server
 #spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 #spring.datasource.username=exciseuser
 #spring.datasource.password=exciseuser
 
-### JPA
+# WEB SERVICES
+ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
