LdapUserLogin for new-design

--- a/workspace/ims-ldap-user/pom.xml
+++ b/workspace/ims-ldap-user/pom.xml
@@ -10,7 +10,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
-	<name>LdapUserLogin</name>
+	<name>LdapUserLoginNew</name>
 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
