--- a/workspace/ims-ldap-user/src/main/resources/application.properties
+++ b/workspace/ims-ldap-user/src/main/resources/application.properties
@@ -14,8 +14,8 @@ server.context-path=/ims-ldap-user
 # ----------------------------------------
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
+spring.datasource.username=exciseuser
+spring.datasource.password=exciseuser
 
 # ----------------------------------------
 # APACHE CXF JAX-WS PROVIDER PROPERTIES
@@ -25,7 +25,7 @@ cxf.path=/services
 # ----------------------------------------
 # LOGGING PROPERTIES
 # ----------------------------------------
-app.logging.path=/tmp/ims-ldap-user/logs
+app.logging.path=/tmp/ims-ldap-user2/logs
 app.logging.rolling-file-appender.min-index=1
 app.logging.rolling-file-appender.max-index=10
 app.logging.rolling-file-appender.max-file-size=10MB
