Using LdapUserLogin and Change Role

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.password=exciseadm
 #spring.datasource.password=exciseuser
 
 # WEB SERVICES
-ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLogin/services/LoginLdap
+ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/services/LoginLdap
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
@@ -37,3 +37,6 @@ ws.excise.sourceSystem=XXX
 ws.excise.destinationSystem=PM
 ws.excise.options=
 ws.excise.ipaddress=10.11.1.10
+
+# APP CONFIGURE
+application.env=
