--- a/workspace/ims-ldap-user/src/main/resources/application-office.properties
+++ b/workspace/ims-ldap-user/src/main/resources/application-office.properties
@@ -4,6 +4,6 @@
 # DATA PROPERTIES
 # ----------------------------------------
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
 spring.datasource.username=exciseuser
 spring.datasource.password=exciseuser
