--- a/workspace/ims-webapp/src/main/resources/application-dev.properties
+++ b/workspace/ims-webapp/src/main/resources/application-dev.properties
@@ -1,22 +1,5 @@
 
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
-#####  AD : MOCKUP
-#ldap.url=ldap://10.200.160.16:389
-#ldap.base=OU=Locations,DC=TMBTest,DC=local
-#ldap.domain=TMBTest.local
-### JPA
-
-
-ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
-ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
-ws.excise.ipaddress=0:0:0:0:0:0:0:1
-ws.excise.username=btchol1or
-ws.excise.password=XXXX
-ws.excise.systemid=BT
-ws.excise.sourceSystem=XXX
-ws.excise.destinationSystem=PM
-ws.excise.options=
-ws.excise.ipaddress=10.11.1.10
+spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseuser
+spring.datasource.password=exciseuser
