Add JOB ,okHttp Get ,pom quartz

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -31,6 +31,19 @@ spring.datasource.password=exciseadm
 ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/services/LoginLdap
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+
+# WEB SERVICES INTERNAL ALDIT
+
+#Test
+ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
+
+#ws.excise.wsSystemUnworking=http://192.168.48.36:8080/oper\u2010report\u2010uat/rest/getJsonSystem
+
+############## SYSTEM UNWORKING BATCH JOB #################
+#### Specific day 1 of month   = * 0 0 1 * ? *
+#### day Test 2 m =0 0/2 * 1/1 * ? *
+system.unworking.job.cronExpressions=0 0/2 * 1/1 * ? *
+
 ws.excise.ipaddress=0:0:0:0:0:0:0:1
 ws.excise.username=btchol1or
 ws.excise.password=XXXX
