--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -34,6 +34,7 @@
 		<hikaricp.version>2.6.3</hikaricp.version>
 		<p6spy.version>3.0.0</p6spy.version>
 		<swagger.version>2.7.0</swagger.version>
+		<quartz.version>2.2.1</quartz.version>
 		<jasperreports.version>6.5.1</jasperreports.version>
 		<itext.version>2.1.7</itext.version>
 		<apache-poi.version>3.17</apache-poi.version>
@@ -196,6 +197,18 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
+		</dependency>
+		
+		<!-- quartz -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz-jobs</artifactId>
+			<version>${quartz.version}</version>
 		</dependency>
 
 		<!-- JasperReports -->
