--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -39,6 +39,7 @@
 		<itext.version>2.1.7</itext.version>
 		<apache-poi.version>3.17</apache-poi.version>
 		<apache.cxf.version>3.2.1</apache.cxf.version>
+		<okhttp.version>3.13.1</okhttp.version>
 		<!-- Plugin Version -->
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
 	</properties>
@@ -199,16 +200,14 @@
 			<version>${swagger.version}</version>
 		</dependency>
 		
-		<!-- quartz -->
+		<!-- Quartz - Enterprise Job Scheduler -->
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>${quartz.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz-jobs</artifactId>
-			<version>${quartz.version}</version>
 		</dependency>
 
 		<!-- JasperReports -->
@@ -353,10 +352,11 @@
 			<version>${apache.cxf.version}</version>
 		</dependency>
 
+		<!-- OkHttp -->
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>3.13.1</version>
+			<version>${okhttp.version}</version>
 		</dependency>
 
 	</dependencies>
