--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -31,6 +31,7 @@ spring.datasource.password=exciseadm
 ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/services/LoginLdap
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+ws.excise.endpointIncFri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
 
 # WEB SERVICES INTERNAL ALDIT
 
