--- a/workspace/ims-ldap-user/pom.xml
+++ b/workspace/ims-ldap-user/pom.xml
@@ -142,6 +142,19 @@
 
 		<plugins>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			
 			<!-- Allowing to package executable jar or war archives and run an application 
 				"in-place" -->
 			<plugin>
