--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -33,8 +33,8 @@ ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpointIncFri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
 
-# WEB SERVICES INTERNAL ALDIT
-
+# Web Service Internal Audit
+ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 #Test
 ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
 
