--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -32,6 +32,7 @@ ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/servic
 ws.excise.endpointIncFri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpointRegFri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpointIncFri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
+ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 
 # WEB SERVICES INTERNAL ALDIT
 
