edit ws licenseList

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -36,6 +36,7 @@ ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/
 
 # Web Service Internal Audit
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
+ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
 #Test
 ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
 
