--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -14,18 +14,18 @@ server.servlet.context-path=/excise-backend
 # DATASOURCE - Office
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@192.168.1.117:1521:orcl
-spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
-spring.datasource.username=exciseadm
-spring.datasource.password=exciseadm
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
+#spring.datasource.username=exciseadm
+#spring.datasource.password=exciseadm
 
 # DATASOURCE - Baiwa Server
 #spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
-#spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
-#spring.datasource.username=exciseuser
-#spring.datasource.password=exciseuser
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@150.95.24.42:1521:orcl
+spring.datasource.username=exciseuser
+spring.datasource.password=exciseuser
 
 # WEB SERVICES
 ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/services/LoginLdap
@@ -37,6 +37,9 @@ ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/
 # Web Service Internal Audit
 ws.excise.endpointIncFri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
+
+# Web Service Main Information System
+ws.excise.InquiryDutyGroup=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryDutyGroup
 #Test
 ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
 
