--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -42,6 +42,8 @@ ws.excise.endpointLicFri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/
 ws.excise.endpointInquiryDutyGroup=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryDutyGroup
 ws.excise.endpointInquiryEdOffice=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryEdOffice
 ws.excise.endpointInquiryHoliday=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryHoliday
+ws.excise.endpointInquiryHospital=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryHospital
+ws.excise.endpointInquiryIncmast=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryIncmast
 
 #Test
 ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
