add WS InquiryBank, InquiryOffcodeAddress, InquiryTitle

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -44,6 +44,9 @@ ws.excise.endpointInquiryEdOffice=http://webtest.excise.go.th/EDRestServicesUAT/
 ws.excise.endpointInquiryHoliday=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryHoliday
 ws.excise.endpointInquiryHospital=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryHospital
 ws.excise.endpointInquiryIncmast=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryIncmast
+ws.excise.endpointInquiryBank=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryBank
+ws.excise.endpointInquiryTitle=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryTitle
+ws.excise.endpointInquiryOffcodeAddress=http://webtest.excise.go.th/EDRestServicesUAT/reg/InquiryOffcodeAddress
 
 #Test
 ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
