--- a/workspace/ims-webapp/pom.xml
+++ b/workspace/ims-webapp/pom.xml
@@ -199,7 +199,7 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
-		
+
 		<!-- Quartz - Enterprise Job Scheduler -->
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
@@ -358,7 +358,11 @@
 			<artifactId>okhttp</artifactId>
 			<version>${okhttp.version}</version>
 		</dependency>
-
+			<dependency>
+				<groupId>com.monitorjbl</groupId>
+				<artifactId>xlsx-streamer</artifactId>
+				<version>2.1.0</version>
+			</dependency>
 	</dependencies>
 
 	<build>
