--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.datasource.password=exciseuser
 # WEB SERVICES
 # Master Data
 ws.excise.endpoint.rdb.inquiry-bank=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryBank
+ws.excise.endpoint.rdb.inquiry-duedate-ps0112=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryDuedatePs0112
 ws.excise.endpoint.rdb.inquiry-duty-group=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryDutyGroup
 ws.excise.endpoint.rdb.inquiry-ed-office=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryEdOffice
 ws.excise.endpoint.rdb.inquiry-holiday=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryHoliday
