Update WS SystemUnworking

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -44,8 +44,8 @@ ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/servic
 ws.excise.endpoint.inc.incfri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpoint.inc.incfri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
 ws.excise.endpoint.lic.licfri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
-ws.excise.wsSystemUnworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
-#ws.excise.wsSystemUnworking=http://192.168.48.36:8080/oper-report-uat/rest/getJsonSystem
+ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
+#ws.excise.endpoint.pm.system-unworking=http://192.168.48.36:8080/oper-report-uat/rest/getJsonSystem
 # Tax Audit
 ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
