--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
 spring.profiles.active=@activatedProperties@
-#spring.profiles.active=dev
+spring.profiles.active=IAmDev
 
 # ----------------------------------------
 # WEB PROPERTIES
