edit jop licenseList

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -54,6 +54,7 @@ ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT
 #### Specific day 1 of month   = * 0 0 1 * ? *
 #### day Test 2 m =0 0/2 * 1/1 * ? *
 system.unworking.job.cronExpressions=0 0/2 * 1/1 * ? *
+license.list.job.cronExpressions=0 0/1 * 1/1 * ? *
 
 ws.excise.system-id=WSS
 ws.excise.ip-address=192.168.160.67
