Update WS OASFRI0100

--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -49,6 +49,7 @@ ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e74
 # Tax Audit
 ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
 
 ############## SYSTEM UNWORKING BATCH JOB #################
 #### Specific day 1 of month   = * 0 0 1 * ? *
