--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
 spring.profiles.active=@activatedProperties@
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -50,6 +50,12 @@ ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e74
 ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
+
+# WSFM
+ws.client.other.getJsonQt =http://192.168.48.36:8080/excise-pm/rest/getJsonQt
+ws.client.other.getJsonPy2 =http://192.168.48.36:8080/excise-pm/rest/getJsonPy2
+ws.client.other.getJsonPy1 =http://192.168.48.36:8080/excise-pm/rest/getJsonPy1
+ws.client.other.getJsonAssess =http://192.168.48.36:8080/excise-pm/rest/getJsonAssess
 
 ############## SYSTEM UNWORKING BATCH JOB #################
 #### Specific day 1 of month   = * 0 0 1 * ? *
