--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PROFILES
 spring.profiles.active=@activatedProperties@
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 # ----------------------------------------
 # WEB PROPERTIES
@@ -44,18 +44,16 @@ ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/servic
 ws.excise.endpoint.inc.incfri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpoint.inc.incfri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
 ws.excise.endpoint.lic.licfri6010=http://webtest.excise.go.th/EDAuditServicesUAT/lic/LicFri6010
-ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
-#ws.excise.endpoint.pm.system-unworking=http://192.168.48.36:8080/oper-report-uat/rest/getJsonSystem
+#ws.excise.endpoint.pm.system-unworking=https://dcfbf908-a79a-4a92-8978-3bce03e740ec.mock.pstmn.io/oper-report-uat/rest/getJsonSystem
+ws.excise.endpoint.pm.system-unworking=http://192.168.48.36:8080/oper-report-uat/rest/getJsonSystem
+ws.excise.endpoint.pm.py1=http://192.168.48.36:8080/excise-pm/rest/getJsonPy1
+ws.excise.endpoint.pm.py2=http://192.168.48.36:8080/excise-pm/rest/getJsonPy2
+ws.excise.endpoint.pm.qt=http://192.168.48.36:8080/excise-pm/rest/getJsonQt
+ws.excise.endpoint.pm.assess=http://192.168.48.36:8080/excise-pm/rest/getJsonAssess
 # Tax Audit
 ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
-
-# WSFM
-ws.client.other.getJsonQt =http://192.168.48.36:8080/excise-pm/rest/getJsonQt
-ws.client.other.getJsonPy2 =http://192.168.48.36:8080/excise-pm/rest/getJsonPy2
-ws.client.other.getJsonPy1 =http://192.168.48.36:8080/excise-pm/rest/getJsonPy1
-ws.client.other.getJsonAssess =http://192.168.48.36:8080/excise-pm/rest/getJsonAssess
 
 ############## SYSTEM UNWORKING BATCH JOB #################
 #### Specific day 1 of month   = * 0 0 1 * ? *
