--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -53,6 +53,7 @@ ws.excise.endpoint.pm.assess=http://192.168.48.36:8080/excise-pm/rest/getJsonAss
 # Tax Audit
 ws.excise.endpoint.inc.incfri8000=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8000
 ws.excise.endpoint.reg.regfri4000=http://webtest.excise.go.th/EDAuditServicesUAT/reg/RegFri4000
+ws.excise.endpoint.ana.anafri0001=http://webtest.excise.go.th/EDAuditServicesUAT/ana/AnaFri0001
 ws.excise.endpoint.oas.oasfri0100=http://webtest.excise.go.th/EDRestServicesUAT/oas/OASFRI0100
 
 ############## SYSTEM UNWORKING BATCH JOB #################
