--- a/workspace/ims-webapp/src/main/resources/application-uat.properties
+++ b/workspace/ims-webapp/src/main/resources/application-uat.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:oracle:thin:@192.168.3.40:1521:db3uat3
 spring.datasource.username=imsuser
 spring.datasource.password=uimsuser
 app.path.upload=/opt/imsapp/upload/
+
+ws.excise.endpoint.ldapuser.dev=http://192.168.160.67:7001/LdapUserLoginNew/services/LoginLdap
