--- a/workspace/ims-ldap-user/pom.xml
+++ b/workspace/ims-ldap-user/pom.xml
@@ -229,9 +229,9 @@
 		</profile>
 		<!-- SIT Environment -->
 		<profile>
-			<id>sit</id>
+			<id>office</id>
 			<properties>
-				<activatedProperties>sit</activatedProperties>
+				<activatedProperties>office</activatedProperties>
 			</properties>
 		</profile>
 		<!-- UAT Environment -->
