--- a/workspace/ims-ldap-user/src/main/resources/application-dev.properties
+++ b/workspace/ims-ldap-user/src/main/resources/application-dev.properties
@@ -5,5 +5,5 @@
 # ----------------------------------------
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=exciseuser
-spring.datasource.password=exciseuser
+spring.datasource.username=exciseOffice
+spring.datasource.password=exciseOffice
