--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -39,7 +39,7 @@ ws.excise.endpoint.rdb.inquiry-incmast=http://webtest.excise.go.th/EDRestService
 ws.excise.endpoint.rdb.inquiry-title=http://webtest.excise.go.th/EDRestServicesUAT/rdb/InquiryTitle
 ws.excise.endpoint.reg.inquiry-offcode-address=http://webtest.excise.go.th/EDRestServicesUAT/reg/InquiryOffcodeAddress
 # LDAP
-ws.excise.endpoint.ldapuser.dev=http://150.95.24.42:8080/LdapUserLoginNew/services/LoginLdap
+ws.excise.endpoint.ldapuser.dev=http://baiwadev.thddns.net:9440/LdapUserLoginNew/services/LoginLdap
 # Internal Audit
 ws.excise.endpoint.inc.incfri8020=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8020
 ws.excise.endpoint.inc.incfri8040=http://webtest.excise.go.th/EDAuditServicesUAT/inc/IncFri8040
