--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # PROFILES
-#spring.profiles.active=@activatedProperties@
+spring.profiles.active=@activatedProperties@
 #spring.profiles.active=IAmDev
+spring.main.allow-bean-definition-overriding=true
 
 # ----------------------------------------
 # WEB PROPERTIES
