--- a/workspace/ims-webapp/src/main/resources/application-uat.properties
+++ b/workspace/ims-webapp/src/main/resources/application-uat.properties
@@ -1,7 +1,10 @@
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.3.40:1521:db3uat3
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+#spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.1.117:1521:orcl
+
+spring.datasource.driverClassName=com.p6spy.engine.spy.P6SpyDriver
+spring.datasource.url=jdbc:p6spy:oracle:thin:@192.168.3.40:1521:db3uat3
 spring.datasource.username=imsuser
 spring.datasource.password=uimsuser
 app.path.upload=/opt/imsapp/upload/
 
-ws.excise.endpoint.ldapuser.dev=http://192.168.160.67:7001/LdapUserLoginNew/services/LoginLdap
+ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
