--- a/workspace/ims-webapp/src/main/resources/application-uat.properties
+++ b/workspace/ims-webapp/src/main/resources/application-uat.properties
@@ -8,3 +8,5 @@ spring.datasource.password=uimsuser
 app.path.upload=/opt/imsapp/upload/
 
 ws.excise.endpoint.ldapuser.dev=http://dexsrvint.excise.go.th:5080/LDAPGateway/LDPAGAuthenAndGetUserRoleService
+
+user.list.test=admin,ta001401,ta001402,ta001403,ia000100
