--- a/workspace/ims-webapp/src/main/resources/application.properties
+++ b/workspace/ims-webapp/src/main/resources/application.properties
@@ -76,3 +76,4 @@ application.env=
 application.swagger.enable=true
 
 app.path.upload=C:/Baiwa/upload
+user.list.test=admin,ta001401,ta001402,ta001403,ia000100
